// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sparkline > renders custom size 1`] = `
<div>
  <svg
    class="overflow-visible"
    height="20"
    width="80"
  >
    <defs>
      <lineargradient
        id="spark-fill"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent))"
          stop-opacity="0.18"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent))"
          stop-opacity="0"
        />
      </lineargradient>
    </defs>
    <path
      d="M 0 20 L 40 0 L 80 10 L 80 20 L 0 20 Z"
      fill="url(#spark-fill)"
    />
    <path
      d="M 0 20 L 40 0 L 80 10"
      fill="none"
      stroke="hsl(var(--ink-muted))"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.25"
    />
    <circle
      cx="80"
      cy="10"
      fill="hsl(var(--accent))"
      r="2"
    />
  </svg>
</div>
`;

exports[`Sparkline > renders default 1`] = `
<div>
  <svg
    class="overflow-visible"
    height="32"
    width="120"
  >
    <defs>
      <lineargradient
        id="spark-fill"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="hsl(var(--accent))"
          stop-opacity="0.18"
        />
        <stop
          offset="100%"
          stop-color="hsl(var(--accent))"
          stop-opacity="0"
        />
      </lineargradient>
    </defs>
    <path
      d="M 0 32 L 20 22.857142857142858 L 40 27.42857142857143 L 60 13.714285714285715 L 80 18.285714285714285 L 100 9.142857142857142 L 120 0 L 120 32 L 0 32 Z"
      fill="url(#spark-fill)"
    />
    <path
      d="M 0 32 L 20 22.857142857142858 L 40 27.42857142857143 L 60 13.714285714285715 L 80 18.285714285714285 L 100 9.142857142857142 L 120 0"
      fill="none"
      stroke="hsl(var(--ink-muted))"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.25"
    />
    <circle
      cx="120"
      cy="0"
      fill="hsl(var(--accent))"
      r="2"
    />
  </svg>
</div>
`;
